initial test framework